bug fixes: content and image alignment for mobile device all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,13 +20,6 @@ body {
     background-color: #e3d888;
 }
 
-.hr-line {
-    border-top: 3px solid #5c95ff;
-    margin: 0 auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
 /******************Navbar***/
 
 .navbar {
@@ -68,6 +61,34 @@ body {
     color: #5c95ff;
 }
 
+
+/********************Footer***/
+
+.list-inline {
+    text-align: center;
+    margin-top: 12px;
+}
+
+.list-inline-item {
+    color: #5c95ff;
+    font-size: 75%;
+}
+
+.list-inline-item a {
+    color: #5c95ff;
+    font-weight: bold;
+}
+
+.list-inline-item a:hover {
+    color: #515751;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.fa-facebook-square {
+    font-size: 200%;
+}
+
 /********************Main body hero section***/
 
 h1,
@@ -83,10 +104,26 @@ h3 {
 
 p {
     font-size: 90%;
+    margin: 0 auto;
 }
 
 .main-section {
     margin-bottom: 100px;
+}
+
+.hr-line {
+    border-top: 3px solid #5c95ff;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.hr-line-top {
+    max-width: 100%;
+    border-top: 3px solid #5c95ff;
+    margin: 0 auto;
+    margin-top: 10px;
+    margin-bottom: 10px;        
 }
 
 #home-page-image img {
@@ -105,7 +142,7 @@ p {
 
 .large-image-top {
     margin-top: 10px;
-    margin-bottom: -10px;
+    margin-bottom: 0px;
     max-height: 250px;
     overflow: hidden;
 }
@@ -157,8 +194,7 @@ p {
 }
 
 .image-section img {
-    max-width: 80%;
-    max-height: 80%;
+    width: 100%;
     display: block;
     margin: 0 auto;
     object-fit: contain;
@@ -198,10 +234,15 @@ p {
 }
 
 #youtube-video {
-    max-width: 100%;
+    width: 80%;
+    max-width: 640px;
     margin-top: 30px;
-    margin-bottom: 30px;
     text-align: center;
+    position: relative; 
+}
+
+#youtube-video iframe {
+	width: 100%;
 }
 
 /********************Contact.html***/
@@ -252,32 +293,6 @@ form {
     width: 100%;
 }
 
-/********************Footer***/
-
-.list-inline {
-    text-align: center;
-    margin-top: 12px;
-}
-
-.list-inline-item {
-    color: #5c95ff;
-}
-
-.list-inline-item a {
-    color: #5c95ff;
-    font-weight: bold;
-}
-
-.list-inline-item a:hover {
-    color: #515751;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.fa-facebook-square {
-    font-size: 200%;
-}
-
 /********************Media queries***/
 
 @media only screen and (min-width: 992px) {
@@ -319,11 +334,7 @@ form {
     }
 
     .hr-line-top {
-        max-width: 40%;
-        border-top: 3px solid #5c95ff;
-        margin: 0 auto;
-        margin-top: 10px;
-        margin-bottom: 10px;        
+        max-width: 40%;   
     }
 
     .image-section {
